# tei-client

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: CI.yml
CI/: wait_for_server.py
src/tei_client/: __init__.py  models.py
src/tei_client/clients/: __init__.py  base.py  grpc.py  grpc_client.py  http.py  http_client.py
src/tei_client/grpc/: tei_pb2_grpc.py
src/tei_client/stubs/: tei_pb2.py  tei_pb2.pyi  tei_pb2_grpc.py
tests/: __init__.py  test_grpc.py  test_http.py
