[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tei-client"
dynamic = ["version"]
description = 'Convenience Client for Hugging Face Text Embeddings Inference (TEI) with synchronous and asynchronous HTTP/gRPC support'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "Lukas Kreussel", email = "65088241+LLukas22@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = [
  "pydantic>=2.0",
  "httpx>=0.20"
]

[project.optional-dependencies]
grpc=[
    "grpcio>=1.60.0",
]

testing=[
  "pytest",
  "pytest-asyncio"
]

[project.urls]
Documentation = "https://github.com/LLukas22/tei-client#readme"
Issues = "https://github.com/LLukas22/tei-client/issues"
Source = "https://github.com/LLukas22/tei-client"

[tool.hatch.version]
path = "src/tei_client/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tei_client tests}"

[tool.coverage.run]
source_pkgs = ["tei_client", "tests"]
branch = true
parallel = true
omit = [
  "src/tei_client/__about__.py",
]

[tool.coverage.paths]
tei_client = ["src/tei_client", "*/tei-client/src/tei_client"]
tests = ["tests", "*/tei-client/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
required-version = ">=0.6.0"
preview = true
exclude = [".venv"]
src = ["src", "tests"]
target-version = "py39"

[tool.ruff.format]
docstring-code-format = true
indent-style = "tab"
preview = true
quote-style="double"
skip-magic-trailing-comma = true

[tool.ruff.lint]
preview = true
exclude = ["stubs"]